--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -7,19 +7,83 @@
   <%- partial('post/date', {class_name: 'archive-article-date', date_format: null}) %>
   <% } %>
   <% if(theme.word_count && theme.word_count.enable && !post.no_word_count){%>
-    <%- partial('post/word') %>
+    <div align="center">
+      <%- partial('post/word') %>
+    </div>
   <% } %>
   </header>
   <% } %>
   <div class="article-entry" itemprop="articleBody">
     <% if (post.excerpt && index){ %>
-    <%- post.excerpt %>
-    <% if (theme.excerpt_link) { %>
-    <a class="article-more-a" href="<%- url_for(post.path) %>#more"><%= theme.excerpt_link %> >></a>
-    <% } %>
+      <%- post.excerpt %>
+      <% if (theme.excerpt_link) { %>
+        <a class="article-more-a" href="<%- url_for(post.path) %>#more"><%= theme.excerpt_link %> >></a>
+      <% } %>
     <% } else { %>
-    <%- post.content %>
+      
+      <% if (page.type === "categories"){ %>
+        <hr>
+        <div align=center style="font-weight:bold">
+          <nav>
+            <font size="4" color="rgba(34, 177, 48)">
+              文章 [<%=site.posts.length%>] &emsp;&emsp;
+              分类 [<%=site.categories.length%>] &emsp;&emsp;
+              标签 [<%=site.tags.length%>]
+            </font>
+          </nav>
+        </div>
+        <br>
+
+        <% if (site.categories.length){ %>
+        <ul class="category-list">
+          <p style='color:lightyellow;font-size:16px'>共计&nbsp;<%= site.categories.length %>&nbsp;个分类</p>
+          <br>
+          <% site.categories.sort('name').each(function(item){ %>
+            <% if(item.posts.length){ %>
+              <li class="category-list-item">
+                <a href="<%- config.root %><%- item.path %>" class="category-list-link" title="<%= item.name %>">
+                  <%= item.name %>
+                  <span class="category-list-count"><sup>[<%= item.posts.length %>]</sup></span>
+                </a>
+              </li>
+            <% } %>
+          <% }) %>
+        </ul>
+        <% } %>
+
+        <% if (site.tags.length) { %>
+          <div class="tag-cloud">
+            <p style='color:lightyellow;font-size:16px'>共计&nbsp;<%= site.tags.length %>&nbsp;个标签</p>
+            <%- tagcloud({
+                min_font: 16, 
+                max_font: 35, 
+                amount: 999, 
+                start_color: 'blue', 
+                end_color: 'gray',
+            }) %>
+          </div>
+        <% } %>
+
+      <% } %>
+
+      <% if (site.tags.length && page.type === "tags") { %>
+        <script type="text/javascript" charset="utf-8" src="<%- url_for('/js/tagcloud.js') %>"></script>
+        <script type="text/javascript" charset="utf-8" src="<%- url_for('/js/tagcanvas.js') %>"></script>
+        <div class="widget-wrap">
+          
+          <div id="myCanvasContainer" class="widget tagcloud">
+            <canvas width="200" height="200" id="resCanvas" style="width:100%">
+              <%- tagcloud() %>
+            </canvas>
+          </div>
+        </div>
+      <% } %>
+
+      <%- post.content %>
     <% } %>
+
+    <%# "start == 分类、标签页面不需要文章结束语和版权说明" %>
+    <% if ((page.type != "tags") && (page.type != 'categories')) { %>
 
     <% if ((theme.reward_type === 2 || (theme.reward_type === 1 && post.reward)) && !index){ %>
     <div class="page-reward">
@@ -55,31 +119,33 @@
     </div>
     <% } %>
 
-    <% if (((theme.copyright_type === 2) || (theme.copyright_type === 1 && post.copyright)) && !index){ %>
-    <div class="declare"> 
-      <ul class="post-copyright">
-        <li>
-          <strong>本文作者：</strong>
-          <%= config.author%>
-        </li>
-        <li>
-          <strong>本文链接：</strong>
-          <a href="<%- yilia_plus_full_url(post.path) %>" title="<%= post.title %>" target="_blank"><%- yilia_plus_full_url(post.path) %></a>
-        </li>
-        <% if (theme.copyright_text || theme.copyright_text == null){ %>
-        <li>
-          <strong>版权声明： </strong>
-          <% var defaultCopyrightText = '本博客所有文章除特别声明外，均采用 <a href="https://github.com/JoeyBling/hexo-theme-yilia-plus/blob/master/LICENSE" rel="external nofollow" target="_blank">MIT</a> 许可协议。转载请注明出处！'; %>
-          <%- ( theme.copyright_text == null || theme.copyright_text == true ) ? defaultCopyrightText : theme.copyright_text %>
-        </li>
+    <%# "文章结束语" %>
+    <% if (theme.end_message.enable  && !index) { %>
+    <p align='center' style='color:red; font-size:15px;'>
+      <span>-------------&emsp;</span>
+      <span>
+        <% if (theme.end_message.text) { %>
+          <%= theme.end_message.text %>
+        <% } else { %>
+          <%= theme.end_message.default %>
         <% } %>
-      </ul>
-    </div>
+      <span>
+      <span>&emsp;-------------</span>
+    </p>
     <% } %>
+
+    <%# "版权说明" %>
+      <% if (theme.copyright) {%>
+        <%- partial('post/declare') %>
+    <% } %>
+    
+  <%# "分类、标签页面不需要文章结束语和版权说明 == end" %>
+
+  <% } %>
 
   </div>
   <div class="article-info article-info-index">
-    <%if(post.top){%>
+    <% if(post.top) { %>
     <div class="article-pop-out tagcloud">
       <i class="icon-tuding"></i>
       <a class="article-tag-list-link color3">置顶</a>
@@ -107,47 +173,64 @@
 
 
 <% if (!index && post.comments){ %>
+  <%# "以下为集成的可配置评论系统" %>
 
-<% if (theme.changyan_appid && theme.changyan_conf){ %>
-<%- partial('post/changyan', {
+  <% if (theme.duoshuo){ %>
+  <%- partial('post/duoshuo', {
       key: post.slug,
       title: post.title,
       url: config.url+url_for(post.path)
     }) %>
-<% } %>
-
-<% if (theme.disqus || config.disqus_shortname){ %>
-<section id="comments">
-  <div id="disqus_thread"></div>
-  <script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname =
-    '<%= theme.disqus || config.disqus_shortname %>'; // required: replace example with your forum shortname
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function () {
-      var dsq = document.createElement('script');
-      dsq.type = 'text/javascript';
-      dsq.async = true;
-      dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-
-  </script>
-  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
-      Disqus.</a></noscript>
-</section>
-<% } %>
-
-<% if (theme.giteement && theme.giteement.enable){ %>
-<%- partial('post/giteement', {
+  <% } %>
+  
+  <% if (theme.wangyiyun){ %>
+  <%- partial('post/wangyiyun', {
       key: post.slug,
       title: post.title,
       url: config.url+url_for(post.path)
     }) %>
-<% } %>
+  <% } %>
 
-<% if (theme.gitment_owner && theme.gitment_repo &&theme.gitment_oauth && theme.gitment_oauth.client_id && theme.gitment_oauth.client_secret){ %>
+  <% if (theme.changyan_appid && theme.changyan_conf){ %>
+  <%- partial('post/changyan', {
+      key: post.slug,
+      title: post.title,
+      url: config.url+url_for(post.path)
+    }) %>
+  <% } %>
+
+  <% if (theme.disqus || config.disqus_shortname){ %>
+  <section id="comments">
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+      /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+      var disqus_shortname =
+      '<%= theme.disqus || config.disqus_shortname %>'; // required: replace example with your forum shortname
+
+      /* * * DON'T EDIT BELOW THIS LINE * * */
+      (function () {
+        var dsq = document.createElement('script');
+        dsq.type = 'text/javascript';
+        dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+      })();
+
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
+        Disqus.</a></noscript>
+  </section>
+  <% } %>
+
+  <% if (theme.giteement && theme.giteement.enable){ %>
+  <%- partial('post/giteement', {
+      key: post.slug,
+      title: post.title,
+      url: config.url+url_for(post.path)
+    }) %>
+  <% } %>
+
+  <% if (theme.gitment_owner && theme.gitment_repo &&theme.gitment_oauth && theme.gitment_oauth.client_id && theme.gitment_oauth.client_secret){ %>
   <%- partial('post/gitment', {
       key: post.slug,
       title: post.title,
@@ -155,4 +238,49 @@
     }) %>
   <% } %>
 
+  <% if(theme.gitalk.enable){ %>
+  <%- partial('post/gitalk', {
+      key: post.slug,
+      title: post.title,
+      url: config.url+url_for(post.path)
+    }) %>
+  <% } %>
+
+  <% if (theme.valine && theme.valine.appid && theme.valine.appkey){ %>
+    <section id="comments" style="margin:10px;padding:10px;background:#fff;">
+      <%- partial('post/valine', {
+        key: post.slug,
+        title: post.title,
+        url: config.url+url_for(post.path)
+        }) %>
+    </section>
+  <% } %>
+
+  <% if (theme.utterance && theme.utterance.enable){ %>
+    <section id="comments" class="comments">
+      <style>
+        .utterances{max-width: 100%;}
+      </style>
+        <script src="https://utteranc.es/client.js"
+          repo="<%= theme.utterance.repo %>"
+          issue-term="<%= theme.utterance.issue_term %>"
+          theme="<%= theme.utterance.theme %>"
+          crossorigin="anonymous"
+          async>
+        </script>
+    </section>
+  <% } %>
+
+
+<% } %>
+
+<% if (!index){ %>
+  <script>
+  (function(){
+      var bp = document.createElement('script');
+      bp.src = '//push.zhanzhang.baidu.com/push.js';
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(bp, s);
+  })();
+  </script>     
 <% } %>
