--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,4 +1,6 @@
 <header id="header">
+  <meta name="google-site-verification" content="aoYLtg2wwFf6IcUZrwgfqfLSfD2cnW3NTaohBtVWfGs" />
+  <meta name="baidu-site-verification" content="AcjqmmQ2mZ" />
   <div id="banner"></div>
   <div id="header-outer" class="outer">
     <div id="header-title" class="inner">
