--- a/layout/_partial/tools.ejs
+++ b/layout/_partial/tools.ejs
@@ -90,9 +90,9 @@
         <ul class="search-ul">
           <% for (var i in theme.friends){ %>
             <li class="search-li">
-              <a href="<%- url_for(theme.friends[i].url) %>" target="_blank" class="search-title" <% if (theme.friends[i].description){ %>title="<%= theme.friends[i].description %>"<% } %>>
-                <% if (theme.friends[i].img){ %>
-                  <img src="<%- url_for(theme.friends[i].img) %>">
+              <a href="<%- url_for(theme.friends[i].url) %>" target="_blank" class="search-title" <% if (theme.friends[i].description){ %> title="<%= theme.friends[i].description %>"<% } %>>
+                <% if (theme.friends[i].ico){ %>
+                  <img src="<%- url_for(theme.friends[i].ico) %>">&emsp;
                 <% } else { %>
                   <i class="icon-link icon"></i>
                 <% } %>
