--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -2,13 +2,21 @@
 <html>
 <%- partial('_partial/head') %>
 
+<!-- 代码块复制功能 -->
+<!-- <script src="<%- url_for('/lib/clipboard.min.js') %>"></script> -->
+<script src="https://cdn.staticfile.org/jquery/3.1.1/jquery.min.js"></script>
+<!-- <script type="text/javascript" src="<%- url_for('/lib/clipboard.js') %>"></script> -->
+<!-- <script type="text/javascript" src="<%- url_for('lib/clipboard_use.js') %>"></script> -->
+
 <body>
   <div id="container" q-class="show:isCtnShow">
     <canvas id="anm-canvas" class="anm-canvas"></canvas>
-    <div class="left-col" q-class="show:isShow">
+    <div class="left-col" q-class="show:isShow"  style="background: <%= theme.style && theme.style.left_ground.enable && theme.style.left_ground.url ? theme.style.left_ground.url : theme.style.left_ground.default %>">
       <%- partial('_partial/left-col', null, {cache: !config.relative_link}) %>
     </div>
-    <div class="mid-col" q-class="show:isShow,hide:isShow|isFalse">
+
+    <div class="mid-col" q-class="show:isShow,hide:isShow|isFalse" style="background: <%= theme.style && theme.style.article_ground.enable && theme.style.article_ground.url ? theme.style.article_ground.url : theme.style.article_ground.default %>">
+
       <% if (theme.github && theme.github.url){ %>
       <%# "GitHub Ribbons" %>
       <a class="forkMe" style="position:absolute;z-index:999;top:0;right:0.5em;" 
@@ -56,6 +64,25 @@
     });
   </script>
   <% } %>
+
+  <!-- 雪花特效2 -->
+  <% if (theme.snow2){ %>
+    <script type="text/javascript" src="<%- url_for('lib/snow2.js') %>"></script>
+  <% } %>
+
+  <!--代码雨-->
+  <% if (theme.code_rain){ %>
+    <!-- 数字雨 -->
+    <script type="text/javascript" src="<%- url_for('lib/rain_code.js') %>"></script>
+  <% } %>
+
+  <!--动态线条背景-->
+  <% if (theme.canvas_nest.enable){ %>
+    <script type="text/javascript" color="<%=theme.canvas_nest.color %>" opacity="<%=theme.canvas_nest.opacity %>"    src="<%- url_for('//cdn.bootcss.com/canvas-nest.js/1.0.0/canvas-nest.min.js') %>"
+        zIndex="<%=theme.canvas_nest.zIndex %>" count="<%=theme.canvas_nest.count %>" >
+    </script>
+  <% } %>
+
 </body>
 
 </html>
