--- a/layout/_partial/archive.ejs
+++ b/layout/_partial/archive.ejs
@@ -5,8 +5,8 @@
   <% if (page.total > 1){ %>
     <nav id="page-nav">
       <%- paginator({
-        prev_text: '&laquo; Prev',
-        next_text: 'Next &raquo;'
+        prev_text: '&lt; Prev',
+        next_text: 'Next &gt;'
       }) %>
     </nav>
   <% } %>
@@ -32,10 +32,10 @@
   <% } %>
 
     <% if (page.total > 1){ %>
-    <nav id="page-nav">
+    <nav id="page-nav" style="font-weight: bold;">
       <%- paginator({
-        prev_text: '&laquo; Prev',
-        next_text: 'Next &raquo;'
+        prev_text: '&lt; Prev',
+        next_text: 'Next &gt;'
       }) %>
     </nav>
   <% } %>
