--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -57,4 +57,17 @@
     <link href="//cdn.bootcss.com/pace/1.0.2/themes/<%= theme.progressBar.color || 'blue'%>/pace-theme-<%= theme.progressBar.type || 'minimal'%>.css" rel="stylesheet">
   <% } %>
 
+  <%# "在线聊天" %>
+  <% if (theme.daovoice) { %>
+    <script>
+      (function(i,s,o,g,r,a,m){i["DaoVoiceObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;a.charset="utf-8";m.parentNode.insertBefore(a,m)})(window,document,"script",('https:' == document.location.protocol ? 'https:' : 'http:') + "//widget.daovoice.io/widget/<%= theme.daovoice_app_id %>.js","daovoice")
+
+      daovoice('init', {
+        app_id: "<%= theme.daovoice_app_id %>"
+      });
+      daovoice('update');
+
+    </script>
+  <% } %>
+
 </head>
