--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -2,11 +2,7 @@
 <html>
 <%- partial('_partial/head') %>
 
-<!-- 代码块复制功能 -->
-<!-- <script src="<%- url_for('/lib/clipboard.min.js') %>"></script> -->
 <script src="https://cdn.staticfile.org/jquery/3.1.1/jquery.min.js"></script>
-<!-- <script type="text/javascript" src="<%- url_for('/lib/clipboard.js') %>"></script> -->
-<!-- <script type="text/javascript" src="<%- url_for('lib/clipboard_use.js') %>"></script> -->
 
 <body>
   <div id="container" q-class="show:isCtnShow">
@@ -55,41 +51,9 @@
         global: theme.hover_effect.global
       }) %>
   <%- partial('_partial/activate-power-mode') %>
-  <%# "背景图片：https://github.com/hustcc/ribbon.js" %>
-  <!-- <script async type="text/javascript" size="90" alpha="0.2" zIndex="0" src="<%- url_for('plugins/ribbon.js/ribbon.min.js') %>"></script> -->
-  <%# "Live2D看板娘：https://github.com/JoeyBling/live2d-widget.js" %>
-  <% if (theme.live2d && theme.live2d.enable){ %>
-    <%- partial('_partial/live2d-widget') %>
-  <% } %>
-  <% if (theme.snow){ %>
-  <script type="text/javascript" src="<%- url_for('lib/snow.js') %>"></script>
-  <script type="text/javascript" src="<%- url_for('lib/jquery-2.1.4.min.js') %>"></script>
-  <script>
-    snow.down();
-    $(window).resize(function() {
-      $("canvas").css("z-index","500").remove();
-      snow.down();
-    });
-  </script>
-  <% } %>
 
-  <!-- 雪花特效2 -->
-  <% if (theme.snow2){ %>
-    <script type="text/javascript" src="<%- url_for('lib/snow2.js') %>"></script>
-  <% } %>
 
-  <!--代码雨-->
-  <% if (theme.code_rain){ %>
-    <!-- 数字雨 -->
-    <script type="text/javascript" src="<%- url_for('lib/rain_code.js') %>"></script>
-  <% } %>
-
-  <!--动态线条背景-->
-  <% if (theme.canvas_nest.enable){ %>
-    <script type="text/javascript" color="<%=theme.canvas_nest.color %>" opacity="<%=theme.canvas_nest.opacity %>"    src="<%- url_for('//cdn.bootcss.com/canvas-nest.js/1.0.0/canvas-nest.min.js') %>"
-        zIndex="<%=theme.canvas_nest.zIndex %>" count="<%=theme.canvas_nest.count %>" >
-    </script>
-  <% } %>
+  <%- partial('custom') %>
 
 </body>
 
